tests/invalid/for_array_step_not_supported.wio
fn Entry() -> i32 {
    let values: i32[] = [1, 2, 3];

    for value in values step 2 {
        return value;
    }

    return 0;
}
